# SansDevLog

./: .gitignore  AGENTS.md  README.md  config.yaml  input.txt  pyproject.toml
docs/plans/: 2026-02-18-punctuation-and-pause-handling-design.md  2026-02-18-punctuation-and-pause-handling.md  2026-02-18-sans-subtitle-generator-design.md  2026-02-18-sans-subtitle-generator.md  2026-02-18-video-builder-module-design.md
src/: __init__.py  audio_builder.py  config.py  frame_generator.py  main.py  parser.py  utils.py  video_builder.py
tests/: __init__.py  test_audio_builder.py  test_config.py  test_frame_generator.py  test_integration.py  test_main.py  test_parser.py  test_utils.py  test_video_builder.py
tests/fixtures/: sample_chinese.txt  sample_mixed.txt
