[project]
name = "sans-subtitle-generator"
version = "0.1.0"
description = "Generate video subtitles with typing sounds"
requires-python = ">=3.10"
dependencies = [
    "Pillow>=10.0.0",
    "PyYAML>=6.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
sans-sub = "src.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools"
